--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>Akan Names</h1>
     <h3>Get Your Akan Name Fast and Free!!</h3>
     <p></p>
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+      </form>
 </body>
 </html>
