--- a/index.html
+++ b/index.html
@@ -12,16 +12,45 @@
     <h1>Akan Names</h1>
     <h3>Get Your Akan Name Fast and Free!!</h3>
     <p></p>
+    <div class="akan">
+        <table>
+            <tr>
+              <th>Female</th>
+              <th>Male</th>
+            </tr>
+            <tr>
+              <tr>Sunday</tr>  
+            </tr>
+            <tr>
+              <td>Kwasi</td>
+              <td>Akosua</td>
+              <td>Kwadwo</td>
+              <td>Adwoa</td>
+              <td>Kwabena</td>
+              <td>Abenaa</td>
+              <td>Kwaku</td>
+              <td>Akua</td>
+              <td>Yaw</td>
+              <td>Yaa</td>
+              <td>Kofi</td>
+              <td>Afua</td>
+              <td>Kwame</td>
+              <td>Ama</td>
+            </tr>
+    </table>
+    </div>
     <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname"> <br>
-        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-        <label for="javascript">JavaScript</label> <br>
-        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-        <label for="javascript">JavaScript</label><br>
+        <!-- <input type="radio" id="javascript" name="fav_language" value="JavaScript"> -->
+        <label for="gender">Gender:</label>
+        <select id="Gender" name="gender"> 
+        <option value="female">Female</option>
+        <option value="male">Male</option>
         <input type="submit" value="Submit">
       </form>
+      
 </body>
 </html>
