--- a/index.html
+++ b/index.html
@@ -15,28 +15,45 @@
     <div class="akan">
         <table>
             <tr>
+              <th>Dates</th>
               <th>Female</th>
               <th>Male</th>
             </tr>
             <tr>
-              <tr>Sunday</tr>  
-            </tr>
-            <tr>
+              <td>Sunday</td>
               <td>Kwasi</td>
               <td>Akosua</td>
-              <td>Kwadwo</td>
-              <td>Adwoa</td>
-              <td>Kwabena</td>
+            </tr>
+            <tr>
+                <td>Monday</td>
+                <td>Kwadwo</td>
+                <td>Adwoa</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>Kwabena</td>
               <td>Abenaa</td>
+            </tr>
+              <tr>
+              <td>Wednesday</td>
               <td>Kwaku</td>
               <td>Akua</td>
+            </tr>
+            <tr>
+              <td>Thursday</td>
               <td>Yaw</td>
               <td>Yaa</td>
+            </tr>
+            <tr>
+             <td>Friday</td>
               <td>Kofi</td>
               <td>Afua</td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
               <td>Kwame</td>
               <td>Ama</td>
-            </tr>
+            </tr>          
     </table>
     </div>
     <form>
