Add div class form

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="images/ghana.jpg" alt="">
+    <div class="start">
     <h1>Akan Names</h1>
     <h3>Get Your Akan Name Fast and Free!!</h3>
     <p></p>
+   </div>
     <div class="akan">
         <table>
             <tr>
@@ -55,7 +56,8 @@
               <td>Ama</td>
             </tr>          
     </table>
-    </div>
+    </div> <br><br>
+    <div class="form">
     <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
@@ -68,6 +70,6 @@
         <option value="male">Male</option>
         <input type="submit" value="Submit">
       </form>
-      
+      </div>
 </body>
 </html>
