Remove input and labels on form

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
         <input type="text" id="lname" name="lname"> <br>
         <!-- <input type="radio" id="javascript" name="fav_language" value="JavaScript"> -->
         <label for="gender">Gender:</label>
-        <select id="Gender" name="gender"> 
-        <option value="female">Female</option>
-        <option value="male">Male</option>
+        <input type = "radio" name = "subject" value = "female"> Female
+        <input type = "radio" name = "subject" value = "male"> Male <br>
         <input type="submit" value="Submit">
       </form>
       </div>
