Added meaning of names

--- a/akan.html
+++ b/akan.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Behind the Akan Names</h1>
+    <p>Ghanians are named according to the days of the week they were born. <br>
+       Below is a list of both male  and female names and their meanings.</p>
+    <ol class="givennames">
+        <li>Dampo-Bodua or Akosua-Kwasi</li>
+        <p>These names are given to children born on Sunday. <br>
+            They are believed to be naturally agile ,quick ,<br>
+            fast and highly-skilled while performing tasks.</p><br>
+        <li>Badwo or Akoto-Okoto or Asera/ Adwoa-Kwado </li>
+        <p>These names are given to children born on Monday.  <br>
+            They are said to be peaceful.</p> <br>
+        <li>Kosia or Nimo- Ogyama/ Abena-Kwabena </li>
+        <p>Children born on Tuesday are given these names. <br>
+           They are assummed to be friendly. </p><br>
+        <li>Kwaku- Atobi, Bonsam/Akua or Daaku- Odaakuo, Obirisuon or Obisi </li>
+        <p>These names is given to children born on Wednesday. <br>
+            Their appelletion is "Evil".They are assumed to be <br>
+            very stubborn. </p> <br>
+        <li>Yaw-Busuo-Operaba/ Yaa or Prek </li>
+        <p>Children born on Thursdays are given these names. <br>
+           They are assummed to be brave. They are never afraid <br>
+           of any outcome. </p><br>
+        <li>Kofi-Ntiful or Babune/ Afua, Kyini- BaafioorNkoso </li>
+        <p>These names are given to children born on Friday. <br>
+            They are assumed to be naturally wanderers and are <br>
+            unable to be somewhere for too long. </p><br>
+        <li>Kwame- Nyamewa or Adoma- Oteanankannuro/Ama, Atoapoma </li>
+        <p>Children born on Saturday are given these names. <br>
+           The males are assummed to be ready for combat while <br>
+           the females are creative.</p> <br>
+    </ol>
     
 </body>
 </html>
