--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         </select>
         <select class="custom-select custom-select-lg mb-3">
             <option selected>Gender</option>
-                <option value="Female">Female</option>
-                <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Male">Male</option>
         </select>
-        <button>Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       </div>
     </div><br><br>
