--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan</title>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  
+  <script defer src="index.js" ></script>
     
 </head>
 <body>
@@ -17,12 +17,7 @@
        Ivory Coast and Ghana. A child’s name is determined by factors surrounding his or her birth.  <br> 
        For example, the day of their birth or the manner in which they were born may determine <br>
         which name they get irrespective of their gender. These Akan names signify the day one is born. <br>
-       According to Akan tradition, each child is born with a name associated to their soul. <br>
-       The day the child is born is therefore determined by the soul. The well thought and  <br>
-        organized naming system of the Akan’s was initiated by the ancestors and has attracted <br>
-       so many people’s attention as they desire to know more about these names. As a matter of <br>
-       fact, it is possible to tell what led to someone’s birth, the day they were born and their <br>
-       rank among the siblings just by their names.</p>
+        
     <button onclick="window.location.href='akan.html'">Read More</button><br><br>
 
        <table class="table table-dark table-striped">
@@ -126,18 +121,23 @@
   </div>
   </div>
 </div><br><br>
+
+<div id="error"></div>
+<form id="form" action="">
+  <!-- <label for="Year of Birth">Year of Birth:</label><br>
+  <input type="number" id="year" name="year" min="1900" max="2021" step="1" width="800px"><br> -->
 <select class="custom-select custom-select-lg mb-3">
     <option selected>Year of birth</option>
     <option value="1900">1900</option>
     <option value="1901">1901</option>
     <option value=	"1903"	>1903	</option>
-<option value=	"1904"	>1904	</option>
-<option value=	"1905"	>1905	</option>
-<option value=	"1906"	>1906	</option>
-<option value=	"1907"	>1907	</option>
-<option value=	"1908"	>1908	</option>
-<option value=	"1908"	>1909	</option>
-<option value=	"1910"	>1910	</option>
+    <option value=	"1904"	>1904	</option>
+    <option value=	"1905"	>1905	</option>
+    <option value=	"1906"	>1906	</option>
+    <option value=	"1907"	>1907	</option>
+    <option value=	"1908"	>1908	</option>  
+    <option value=	"1908"	>1909	</option>
+    <option value=	"1910"	>1910	</option>
 <option value=	"1911"	>1911	</option>
 <option value=	"1912"	>1912	</option>
 <option value=	"1913"	>1913	</option>
@@ -248,10 +248,10 @@
 <option value=	"2018"	>2018	</option>
 <option value=	"2019"	>2019	</option>
 <option value=	"2020"	>2020	</option>
- <option value=	"2021"	>2021	</option>
+ <option value=	"2021"	>2021	</option> 
 </select>
 
-<select class="custom-select custom-select-lg mb-3">
+<select class="custom-select custom-select-lg mb-3" required>
     <option selected>Date of birth</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -309,6 +309,22 @@
       </form>
       </div>
     </div><br><br>
-        <script src="js/bootstrap.min.js"></script>
+
+<footer class="page-footer font-small mdb-color darken-3 pt-4">
+  <div class="container-fluid  pt-3 bg-dark text-white" >
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9 mb-4">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/n55TNdgvWuI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href=""> Njeri, Inc.com</a>
+  </div>
+</footer>
+</div>
+
+
 </body>
 </html>
