--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 
 
-     <!-- <form id="form" action="">
+      <!-- <form id="form" action="">
       <label for="fname">Year of Birth:</label><br>
       <input type="number" id="fname" name="fname" value="Year of birth e.g 2020" min="1900" max="2021" step="1"><br>
       <label for="lname">Month of Birth:</label><br>
@@ -187,7 +187,7 @@
       <input type="radio" id="male" name="gender" value="Male">
       <label for="male">Male</label><br>
       <input type="submit" value="Submit">
-    </form> 
+    </form>  -->
 
 
     <footer class="page-footer font-small mdb-color darken-3 pt-4">
@@ -205,7 +205,7 @@
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
           <a href=""> Njeri, Inc.com</a>
         </div>
-    </footer> -->
+    </footer> 
 
 
 </body>
