--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
 
 <body>
   <div class="jumbotron text-center bg-dark text-white ">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Page 1-1</a></li>
+              <li><a href="#">Page 1-2</a></li>
+              <li><a href="#">Page 1-3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Page 2</a></li>
+          <li><a href="#">Page 3</a></li>
+        </ul>
+      </div>
+    </nav>
+
+
+
+    <nav class="navbar navbar-light bg-dark">
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.png" width="180" height="230" alt="">
+      </a>
+    </nav>
+    
+
+    
     <h1 class="text-uppercase">Akan Names</h1>
     <h3 class="text-uppercase"> Get Your Akan Name Fast and Free!!</h3>
     <p>Akan names come from a traditional naming system for people from countries such as Togo,<br>
